# CotState

./: .gitignore  Makefile  README.md  bug.txt  install_deps.py  pyproject.toml  upload_outputs.py
src/cot/: README.md
src/cot/ablate/: ablate_config.py  ablate_config2.py  block_ablate.py  both_ablate.py  inspect_nudge_cos.py  run_ablate.py
src/cot/collect/: collect_activations.py  collect_config.py  model_utils.py
src/cot/collect2/: collect.py  collect2_config.py  model_utils.py
src/cot/collect_force/: collect.py
src/cot/datagen/: cot_builder.py  datagen_config.py  generate_questions.py  logic_builder.py  proplogic_dataset.jsonl  proplogic_debug.txt  proplogic_questions.csv
src/cot/datagen2/: datagen2_config.py  generate.py
src/cot/outputs/datagen/: proplogic_dataset.jsonl  proplogic_debug.txt  proplogic_questions.csv
src/cot/probes/: compare_vectors.py  fixed_test_config.py  fixed_test_config2.py  probes_config.py  probes_config2.py  run_geom.py  run_geom_train_test.py  run_geom_two_offsets_and_compare.py  run_probes.py  test_fixed_dimension.py
